20250401-kubecon-london/workshop/4-application/apis/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: admin@example.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: admin
        - name: PGADMIN_PORT
          value: "80"
        - name: PGADMIN_SETUP_EMAIL
          value: admin@example.com
        - name: PGADMIN_SETUP_PASSWORD
          value: admin
        - name: PGADMIN_LISTEN_PORT
          value: "80"
        - name: PGADMIN_CONFIG_SERVER_MODE
          value: "False"
        - name: PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION
          value: "False"
        - name: SERVER_PORT
          value: "5432"
        - name: SERVER_NAME
          value: "My PostgreSQL"
        - name: SERVER_HOST
          value: "kcp-rw"  # Replace with your actual PostgreSQL service name
        - name: SERVER_USERNAME
          valueFrom:
            secretKeyRef:
              name: kcp-superuser
              key: username 
        - name: SERVER_PASSWORD
          valueFrom:
            secretKeyRef:
              name: kcp-superuser
              key: password 
        image: dpage/pgadmin4:9.1.0
        imagePullPolicy: IfNotPresent
        name: pgadmin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 1096Mi
