20250401-kubecon-london/workshop/4-application/apis/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
  - name: http
    port: 8080
    targetPort: 80
