20250401-kubecon-london/workshop/4-application/apis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: flask-backend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-flask-backend
            port:
              number: 5000
